# fast_auth

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
src/: __init__.py  config.py  logger.py
src/auth/: deps.py  models.py  routes.py  schemas.py  services.py  utils.py
src/db/: main.py  redis.py
tests/: conftest.py  test_auth.py
